# IELTS_Preparation

./: .gitignore  FUTURE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  pyproject.toml
backend/: .env.example  .env.production  Dockerfile  Dockerfile.service  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_all_endpoints.py  test_conn.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_onboarding_fields.py  002_add_mock_test_tables.py  003_add_telemetry_tables.py  004_add_error_dna_tables.py  grammar_module_tables.py
backend/gateway/: main.py
backend/scripts/: download_telemetry_models.py
backend/services/agents/: __init__.py  base.py  listening.py  mentor.py  mocktest.py  profile.py  reading.py  registry.py  router.py  speaking.py  vocabulary.py  writing.py
backend/services/ai_agent/: gemma_client.py  lmstudio_client.py  main.py  openrouter_client.py
backend/services/analytics/: achievements.py  aggregation.py  main.py  repository.py  router.py  schemas.py  service.py  trajectory.py
backend/services/auth/: router.py  schemas.py
backend/services/chat/: router.py  schemas.py
backend/services/grammar/: __init__.py  curriculum_loader.py  exercise_engine.py  main.py  repository.py  router.py  schemas.py  service.py
backend/services/import_svc/: main.py  repository.py  router.py  schemas.py  service.py
backend/services/journey/: __init__.py  main.py  repository.py  router.py  schemas.py  service.py  study_plan.py
backend/services/listening/: __init__.py  main.py  repository.py  router.py  schemas.py  service.py
backend/services/llm/: README.md  __init__.py  provider.py
backend/services/mocktest/: __init__.py  (+10 more)
backend/shared/: __init__.py  answer_utils.py  config.py  database.py  exam_questions.py  models.py  parsing.py  scheduler.py  schemas.py  schemas.py.bak  security.py  seed.py
(+235 files in other folders)
